# notify

./: .gitignore  Cargo.toml  README.md
.github/: dummy_credentials.ini
.github/workflows/: rust.yml
notify/: Cargo.toml
notify-bin/: Cargo.toml  build.rs
notify-bin/src/: main.rs
notify/src/: credentials.rs  firebase_cloud_messaging.rs  firebase_data.rs  firebase_header.rs  lib.rs  message.rs  telegram.rs  telegram_data.rs  telegram_file.rs
tools/: get_chat_id.sh  httpd.py  photo.py
